add header and slider sections

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   text-align: center;
 }
 
@@ -35,4 +35,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+*/
+body
+{
+  border-top: 5px solid #e56038;
+  background: #ebe8de;
+  font-family: 'Open Sans', sans-serif;
+  color: #333333;
 }
