--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -1,3 +1,5 @@
+/*nav ul
+{list-style:none;}
 nav ul li
 {display:block;
 float:left;
@@ -9,4 +11,20 @@ text-transform: uppercase;
 transition: all .25s ease;}
 
 nav ul li a:hover
-{color: #E56038;}
+{color: #E56038;}*/
+nav {
+	margin-left: 7em;
+	margin-top : 6em;
+}
+nav ul {
+	align-items: center;
+	display : flex;
+	list-style-type: none;
+	justify-content: space-between;
+
+}
+nav ul li {
+	padding-left : 1.5em;
+	/*padding-right: 1.5em;*/
+	text-transform: uppercase;
+}
