--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+p
+{margin: 5px 0;
+line-height: 25px;}
+
+a
+{text-decoration: none;
+color: inherit;
+transition: color .5s ease;}
