--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,13 @@ a
 {text-decoration: none;
 color: inherit;
 transition: color .5s ease;}
+figcaption
+{line-height: 25px;
+font-size:14px;
+width:200px;}
+
+figcaption strong
+{border-bottom: 1px solid #D6D0C1;
+padding-bottom:10px;
+margin: 10px 0;
+display:block;}
